[package]
name = "pyro"
version = "0.1.0"
edition = "2021"
authors = ["ParisNeo <parisneo_ai@google.com>"]
description = "Pyro: A blazing-fast Python version and environment manager"
license = "Apache-2.0"
repository = "https://github.com/ParisNeo/PyRo"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
walkdir = "2.3"